View updates   - Add margin to input elements   - Replace "Welcome" with "SOAM"     - Removing it made things look too bare.   - Update Template button to match the rest   - Menu item plurality

--- a/src/main/resources/templates/fragments/prioritySelectField.html
+++ b/src/main/resources/templates/fragments/prioritySelectField.html
@@ -3,7 +3,7 @@
   <form>
     <th:block th:fragment="select (label, name, items)">
       <div th:with="valid=${!#fields.hasErrors(name)}"
-        th:class="${'form-group' + (valid ? '' : ' has-error')}"
+        th:class="|${'form-group' + (valid ? '' : ' has-error')} mb-3|"
         class="form-group">
         <label class="col-sm-2 control-label" th:text="${label}">Label</label>
 
