--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,7 +3,7 @@
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'home')}">
 <head></head>
 <body>
-<p th:text="#{welcome}" class="display-6">Welcome</p>
+<p class="display-6">Stakeholder &amp; Objective Analysis and Management</p>
 <div class="row">
     <div class="col-md-12">
             <div class="alert alert-secondary p-3 mt-3">
