--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -49,7 +49,7 @@
             <span class="fa fa-home" aria-hidden="true"></span>
             <span>Home</span>
           </li>
-          <li th:replace="~{::menuItem ('/specification/find','specifications','List Specifications','','Specification')}">
+          <li th:replace="~{::menuItem ('/specification/find','specifications','List Specifications','','Specifications')}">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span>Find Specifications</span>
           </li>
@@ -63,18 +63,6 @@
               <li><a class="dropdown-item" href="#">Objective</a></li>
             </ul>
           </li>
-
-<!--          <li th:replace="~{::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')}">-->
-<!--            <span class="fa fa-th-list" aria-hidden="true"></span>-->
-<!--            <span>Veterinarians</span>-->
-<!--          </li>-->
-
-<!--          <li-->
-<!--            th:replace="~{::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','exclamation-triangle','Error')}">-->
-<!--            <span class="fa exclamation-triangle" aria-hidden="true"></span>-->
-<!--            <span>Error</span>-->
-<!--          </li>-->
-
         </ul>
       </div>
     </div>
