More view updates.
  - Remove "Description" and "Notes" columns from listings
  - Add button to return to specification listing
  - Update title

--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -23,47 +23,10 @@
         <td th:text="*{priority}"></td>
       </tr>
     </table>
-  
     <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary">Edit
       Specification</a>
-    <a href="#" onclick="alert('Under Development');" class="btn btn-primary">Add
-      New Stakeholder</a>
-  
-<!--    <br />-->
-<!--    <br />-->
-<!--    <br />-->
-<!--    -->
-<!--    <h2>Stakeholders and Objectives</h2>-->
-<!--    <table class="table table-striped">-->
-<!--      <tr th:each="stakeholder : ${specification.stakeholders}">-->
-<!--        <td valign="top">-->
-<!--          <dl class="dl-horizontal">-->
-<!--            <dt>Name</dt>-->
-<!--            <dd th:text="${stakeholder.stakeholderName}"></dd>-->
-<!--          </dl>-->
-<!--        </td>-->
-<!--        <td valign="top">-->
-<!--          <table class="table-condensed">-->
-<!--            <thead>-->
-<!--              <tr>-->
-<!--                <th>Visit Date</th>-->
-<!--                <th>Description</th>-->
-<!--              </tr>-->
-<!--            </thead>-->
-<!--            <tr th:each="objective : ${stakeholder.objectives}">-->
-<!--              <td th:text="${#temporals.format(objective.createDate, 'yyyy-MM-dd')}"></td>-->
-<!--              <td th:text="${objective?.objectiveDescription}"></td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--              <td><a th:href="@{__${specification.id}__/stakeholder/__${stakeholder.id}__/edit}">Edit Pet</a></td>-->
-<!--              <td><a th:href="@{__${specification.id}__/stakeholder/__${stakeholder.id}__/objectives/new}">Add Visit</a></td>-->
-<!--            </tr>-->
-<!--          </table>-->
-<!--        </td>-->
-<!--      </tr>-->
-<!--  -->
-<!--    </table>-->
-  
+    <!-- TODO: display last view page/search. right now this is the start of the full listing -->
+    <a th:href="@{/specification/list}" class="btn btn-primary">List All Specifications</a>
   </body>
 
 </html>
