Improve navigation between views.
  - Fixed broken link to listing
  - Make "Add" buttons consistent

--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -25,8 +25,8 @@
     </table>
     <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary">Edit
       Specification</a>
-    <!-- TODO: display last view page/search. right now this is the start of the full listing -->
-    <a th:href="@{/specification/list}" class="btn btn-primary">List All Specifications</a>
+    <a href="#" onclick="alert('Under Development');" class="btn btn-primary">Add
+      Stakeholder</a>
   </body>
 
 </html>
