--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -23,7 +23,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button
-          th:with="text=${specificationTemplate['new']} ? 'Create Specification Template' : 'Update Specification Template'"
+          th:with="text=${specificationTemplate['new']} ? 'Add Specification Template' : 'Update Specification Template'"
           class="btn btn-primary" type="submit" th:text="${text}">Create
           Specification Template</button>
       </div>
