Aesthetics update. Add Fontawesome icons to buttons

--- a/src/main/resources/templates/specification/findSpecification.html
+++ b/src/main/resources/templates/specification/findSpecification.html
@@ -19,12 +19,12 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Find
+      <button type="submit" class="btn btn-primary"><i class="fa fa-search me-1" aria-hidden="true"></i> Find
         Specification</button>
-      <a class="btn btn-primary" th:href="@{/specifications}">List all</a>
+      <a class="btn btn-primary" th:href="@{/specifications}"><i class="fa fa-list-ul me-1" aria-hidden="true"></i> List all</a>
     </div>
   </div>
-  <a class="btn btn-primary" th:href="@{/specification/new}">Add Specification</a>
+  <a class="btn btn-primary" th:href="@{/specification/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Specification</a>
 </form>
 </body>
 </html>
