--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -23,9 +23,9 @@
         <td th:text="*{priority}"></td>
       </tr>
     </table>
-    <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary">Edit
+    <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
       Specification</a>
-    <a href="#" onclick="alert('Under Development');" class="btn btn-primary">Add
+    <a href="#" onclick="alert('Under Development');" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
       Stakeholder</a>
   </body>
 
