--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -23,8 +23,8 @@
       <div class="col-sm-offset-2 col-sm-10">
         <button
           th:with="text=${specification['new']} ? 'Add Specification' : 'Update Specification'"
-          class="btn btn-primary" type="submit" th:text="${text}">Add
-          Specification</button>
+          class="btn btn-primary" type="submit" ><i class="fa fa-pencil me-1" aria-hidden="true"></i> <span th:text="${text}">Add
+          Specification</span></button>
       </div>
     </div>
   </form>
