--- a/src/main/resources/templates/specification/template/findSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/findSpecificationTemplate.html
@@ -19,11 +19,11 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Find Specification Template</button>
-      <a class="btn btn-primary" th:href="@{/specifications}">List all</a>
+      <button type="submit" class="btn btn-primary"><i class="fa fa-search me-1" aria-hidden="true"></i> Find Specification Template</button>
+      <a class="btn btn-primary" th:href="@{/specification/templates}"><i class="fa fa-list-ul me-1" aria-hidden="true"></i> List all</a>
     </div>
   </div>
-  <a class="btn btn-primary" th:href="@{/specification/new}">Add Specification Template</a>
+  <a class="btn btn-primary" th:href="@{/specification/template/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Specification Template</a>
 </form>
 </body>
 </html>
