--- a/src/main/resources/templates/fragments/soamTemplateButton.html
+++ b/src/main/resources/templates/fragments/soamTemplateButton.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="templateButton (templates)">
 <div class="dropdown" >
     <button class="btn btn-primary btn-sm" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-        Use Template &nbsp;<i class="fa fa-object-ungroup" aria-hidden="true"></i>
+        Use Template<i class="fa fa-object-ungroup ms-2" aria-hidden="true"></i>
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <li th:each="tempTemplate : ${templates}" >
