Fix template field population
  - introduced this bug when adding the "delete" button.
  - priority now works, too!

--- a/src/main/resources/templates/fragments/soamTemplateButton.html
+++ b/src/main/resources/templates/fragments/soamTemplateButton.html
@@ -11,7 +11,7 @@
                th:attr="data-temp-name=${tempTemplate.name},
                  data-temp-notes=${tempTemplate.notes},
                  data-temp-description=${tempTemplate.description},
-                 data-temp-priority=${tempTemplate.priority}"></a>
+                 data-temp-priority=${tempTemplate.priority.id}"></a>
         </li>
     </ul>
 </div>
