--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -9,7 +9,7 @@
     <div class="col-sm-10 text-end d-flex justify-content-end" th:if="${!#lists.isEmpty(specificationTemplates)}">
       <form th:if="${!specificationTemplate['new']}" id="deleteForm" class="me-2" th:object="${specificationTemplate}" th:action="@{/specification/template/__${specificationTemplate.id}__/delete}" method="post">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{name}"/>
+        <input type="hidden" id="delete-name" th:field="*{name}"/>
         <a class="btn btn-sm btn-primary" onclick="if(confirm('Are you sure you want to delete this template?')) document.getElementById('deleteForm').submit()">Delete<i class="fa fa-trash-o ms-2" aria-hidden="true"></i> </a>
       </form>
       <div th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
