--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -6,14 +6,6 @@
 <body>
 
   <h2>Specification Template</h2>
-    <div class="col-sm-10 text-end d-flex justify-content-end" th:if="${!#lists.isEmpty(specificationTemplates)}">
-      <form th:if="${!specificationTemplate['new']}" id="deleteForm" class="me-2" th:object="${specificationTemplate}" th:action="@{/specification/template/__${specificationTemplate.id}__/delete}" method="post">
-        <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" id="delete-name" th:field="*{name}"/>
-        <a class="btn btn-sm btn-primary" onclick="if(confirm('Are you sure you want to delete this template?')) document.getElementById('deleteForm').submit()">Delete<i class="fa fa-trash-o ms-2" aria-hidden="true"></i> </a>
-      </form>
-      <div th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
-    </div>
   <form th:object="${specificationTemplate}" class="form-horizontal" id="add-specification-form" method="post">
     <div class="form-group has-feedback">
       <input
@@ -26,13 +18,21 @@
         th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}" />
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button
-          th:with="text=${specificationTemplate['new']} ? 'Add Specification Template' : 'Update Specification Template'"
-          class="btn btn-primary" type="submit"><i class="fa fa-plus me-1" aria-hidden="true"></i> <span th:text="${text}">Add
-          Specification Template</span></button>
+      <div class="col-sm-offset-2 col-sm-10 d-flex ">
+        <button class="btn btn-primary me-2" type="submit"
+          th:with="text=${specificationTemplate['new']} ? 'Add Specification Template' : 'Update Specification Template',
+                icon=${specificationTemplate['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
+          <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
+        </button>
+        <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
+        <span class="flex-grow-1"></span>
+        <a class="btn btn-primary" th:if="${!specificationTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete Template</a>
       </div>
     </div>
+  </form>
+  <form th:if="${!specificationTemplate['new']}" id="deleteForm" th:object="${specificationTemplate}" th:action="@{/specification/template/__${specificationTemplate.id}__/delete}" method="post">
+    <input type="hidden" th:field="*{id}"/>
+    <input type="hidden" id="delete-name" th:field="*{name}"/>
   </form>
 </body>
 </html>
