--- a/src/main/resources/templates/specification/findSpecification.html
+++ b/src/main/resources/templates/specification/findSpecification.html
@@ -9,8 +9,7 @@
     <div class="control-group" id="lastNameGroup">
       <label class="col-sm-2 control-label">Name </label>
       <div class="col-sm-10">
-        <input class="form-control" th:field="*{name}" size="30"
-               maxlength="80" minlength="1" required/> <span class="help-inline"><div
+        <input class="form-control" th:field="*{name}" size="30" /> <span class="help-inline"><div
               th:if="${#fields.hasAnyErrors()}">
               <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
             </div></span>
@@ -21,7 +20,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary"><i class="fa fa-search me-1" aria-hidden="true"></i> Find
         Specification</button>
-      <a class="btn btn-primary" th:href="@{/specifications}"><i class="fa fa-list-ul me-1" aria-hidden="true"></i> List all</a>
+      <a class="btn btn-primary" th:href="@{/specification/list}"><i class="fa fa-list-ul me-1" aria-hidden="true"></i> List all</a>
     </div>
   </div>
   <a class="btn btn-primary" th:href="@{/specification/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Specification</a>
