--- a/src/main/resources/templates/specification/specificationList.html
+++ b/src/main/resources/templates/specification/specificationList.html
@@ -50,6 +50,7 @@
       <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-step-forward"></span>
     </span>
 </div>
+<div th:replace="~{fragments/flash :: subFlashMessage}"></div>
 <div><a class="btn btn-primary" th:href="@{/specification/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i>  Add Specification</a> </div>
 </body>
 </html>
