Restore button arrangement.

--- a/src/main/resources/templates/fragments/soamTemplateButton.html
+++ b/src/main/resources/templates/fragments/soamTemplateButton.html
@@ -2,7 +2,7 @@
 <body>
 <th:block th:fragment="templateButton (templates)">
 <div class="dropdown" >
-    <button class="btn btn-primary" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-sm btn-primary" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
         <i class="fa fa-object-ungroup me-2" aria-hidden="true"></i>Use Template
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
