--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -7,6 +7,10 @@
   <h2>Specification</h2>
 
   <form th:object="${specification}" class="form-horizontal" id="add-specification-form" method="post">
+    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+      <div th:if="${!#lists.isEmpty(specificationTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
+      <a th:if="${!specification['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+    </div>
     <div class="form-group has-feedback">
       <input
         th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
@@ -25,9 +29,7 @@
           <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
           <span th:text="${text}">Add/Update</span>
         </button>
-        <div th:replace="~{fragments/soamTemplateButton :: templateButton(${specificationTemplates})}" />
         <span class="flex-grow-1"></span>
-        <a th:if="${!specification['new']}" class="btn btn-primary" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete Specification</a>
       </div>
     </div>
   </form>
