--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -5,6 +5,9 @@
   <head></head>
   <body>
     <h2>Stakeholder Information</h2>
+
+    <p class="lead mb-3">Specification: <a th:href="@{/specification/__${stakeholder.specification.id}__}" th:text="${stakeholder.specification.name}"></a></p>
+
     <table class="table table-striped" th:object="${stakeholder}">
       <tr>
         <th>Name</th>
@@ -26,7 +29,7 @@
     <a th:href="@{__${stakeholder.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
       Stakeholder</a>
     <a href="#" onclick="alert('Under Development');" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
-      Stakeholder</a>
+      Objective</a>
   </body>
 
 </html>
