--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -23,10 +23,37 @@
         <td th:text="*{priority}"></td>
       </tr>
     </table>
-    <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
-      Specification</a>
-    <a th:href="@{__${specification.id}__/stakeholder/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
-      Stakeholder</a>
+    <div class="row">
+      <div class="col">
+        <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
+          Specification</a>
+      </div>
+    </div>
+    <p class="mt-4"></p>
+    <hr/>
+    <h2 >Stakeholders</h2>
+    <div class="col-md-8">
+    <div class="alert alert-warning" th:if="${#lists.isEmpty(specification.stakeholders)}">
+      No Stakeholders have been added to this specification.
+    </div>
+    <table class="table table-striped" th:if="${!#lists.isEmpty(specification.stakeholders)}">
+        <thead>
+        <tr>
+          <th style="width: 350px;">Name</th>
+          <th>Priority</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="stakeholder : ${specification.stakeholders}">
+          <td>
+            <a th:href="@{/stakeholder/__${stakeholder.id}__}" th:text="${stakeholder.name}"/></a>
+          </td>
+          <td th:text="${stakeholder.priority}"/>
+        </tr>
+        </tbody>
+    </table>
+    <a th:href="@{__${specification.id}__/stakeholder/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Stakeholder</a>
+    </div>
   </body>
 
 </html>
