--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -30,8 +30,25 @@
       Stakeholder</a>
     <hr/>
     <p class="mt-4"></p>
-    <div class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
-    <a href="#" onclick="alert('Under Development');" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
+    <div th:if="${#lists.isEmpty(stakeholder.objectives)}" class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
+    <table class="table table-striped" th:if="${!#lists.isEmpty(stakeholder.objectives)}">
+      <thead>
+      <tr>
+        <th style="width: 350px;">Name</th>
+        <th>Priority</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="objective : ${stakeholder.objectives}">
+        <td>
+          <a th:href="@{/objective/__${stakeholder.id}__}" th:text="${objective.name}"/></a>
+        </td>
+        <td th:text="${objective.priority}"/>
+      </tr>
+      </tbody>
+    </table>
+    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
+    <a th:href="@{__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
       Objective</a>
   </body>
 
