--- a/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
+++ b/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-  <h2>Stakeholder Template</h2>
-  <form th:object="${stakeholderTemplate}" class="form-horizontal" id="add-stakeholder-form" method="post">
+  <h2>Objective Template</h2>
+  <form th:object="${objectiveTemplate}" class="form-horizontal" id="add-objective-form" method="post">
     <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:if="${!#lists.isEmpty(stakeholderTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${stakeholderTemplates})}" />
-      <a class="btn btn-sm btn-primary ms-2" th:if="${!stakeholderTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this stakeholder template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+      <div th:if="${!#lists.isEmpty(objectiveTemplates)}" th:replace="~{fragments/soamTemplateButton :: templateButton(${objectiveTemplates})}" />
+      <a class="btn btn-sm btn-primary ms-2" th:if="${!objectiveTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this objective template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
     </div>
     <div class="form-group has-feedback">
       <input
@@ -24,15 +24,15 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
         <button class="btn btn-primary me-2" type="submit"
-          th:with="text=${stakeholderTemplate['new']} ? 'Add Stakeholder Template' : 'Update Stakeholder Template',
-                icon=${stakeholderTemplate['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
+          th:with="text=${objectiveTemplate['new']} ? 'Add Objective Template' : 'Update Objective Template',
+                icon=${objectiveTemplate['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
           <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
         </button>
         <span class="flex-grow-1"></span>
       </div>
     </div>
   </form>
-  <form th:if="${!stakeholderTemplate['new']}" id="deleteForm" th:object="${stakeholderTemplate}" th:action="@{/stakeholder/template/__${stakeholderTemplate.id}__/delete}" method="post">
+  <form th:if="${!objectiveTemplate['new']}" id="deleteForm" th:object="${objectiveTemplate}" th:action="@{/objective/template/__${objectiveTemplate.id}__/delete}" method="post">
     <input type="hidden" th:field="*{id}"/>
     <input type="hidden" id="delete-name" th:field="*{name}"/>
   </form>
