--- a/src/main/resources/templates/objective/template/objectiveTemplateList.html
+++ b/src/main/resources/templates/objective/template/objectiveTemplateList.html
@@ -3,9 +3,9 @@
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'templates')}">
 <head></head>
 <body>
-<h2>Stakeholder Templates</h2>
+<h2>Objective Templates</h2>
 
-<table id="stakeholder_templates" class="table table-striped">
+<table id="objective_templates" class="table table-striped">
   <thead>
   <tr>
       <th style="width: 200px;">Name</th>
@@ -13,11 +13,11 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="stakeholderTemplate : ${listStakeholderTemplates}">
+  <tr th:each="objectiveTemplate : ${listObjectiveTemplates}">
     <td>
-      <a th:href="@{/stakeholder/template/__${stakeholderTemplate.id}__/edit}" th:text="${stakeholderTemplate.name}"/></a>
+      <a th:href="@{/objective/template/__${objectiveTemplate.id}__/edit}" th:text="${objectiveTemplate.name}"/></a>
     </td>
-    <td th:text="${stakeholderTemplate.priority}"/>
+    <td th:text="${objectiveTemplate.priority}"/>
   </tr>
   </tbody>
 </table>
@@ -25,33 +25,33 @@
   <span>Pages:</span>
   <span>[</span>
   <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-      <a th:if="${currentPage != i}" th:href="@{'/stakeholder/template/list?page=' + ${i}}">[[${i}]]</a>
+      <a th:if="${currentPage != i}" th:href="@{'/objective/template/list?page=' + ${i}}">[[${i}]]</a>
       <span th:unless="${currentPage != i}">[[${i}]]</span>
     </span>
   <span>]&nbsp;</span>
   <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/stakeholder/template/list?page=1'}" title="First"
+      <a th:if="${currentPage > 1}" th:href="@{'/objective/template/list?page=1'}" title="First"
          class="fa fa-fast-backward"></a>
       <span th:unless="${currentPage > 1}" title="First" class="fa fa-fast-backward"></span>
     </span>
   <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/stakeholder/template/list?page=__${currentPage - 1}__'}" title="Previous"
+      <a th:if="${currentPage > 1}" th:href="@{'/objective/template/list?page=__${currentPage - 1}__'}" title="Previous"
          class="fa fa-step-backward"></a>
       <span th:unless="${currentPage > 1}" title="Previous" class="fa fa-step-backward"></span>
     </span>
   <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/stakeholder/template/list?page=__${currentPage + 1}__'}" title="Next"
+      <a th:if="${currentPage < totalPages}" th:href="@{'/objective/template/list?page=__${currentPage + 1}__'}" title="Next"
          class="fa fa-step-forward"></a>
       <span th:unless="${currentPage < totalPages}" title="Next" class="fa fa-step-forward"></span>
     </span>
   <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/stakeholder/template/list?page=__${totalPages}__'}" title="Last"
+      <a th:if="${currentPage < totalPages}" th:href="@{'/objective/template/list?page=__${totalPages}__'}" title="Last"
          class="fa fa-fast-forward"></a>
       <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-step-forward"></span>
     </span>
 </div>
 <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
-<a class="btn btn-primary" th:href="@{/stakeholder/template/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Stakeholder Template</a>
+<a class="btn btn-primary" th:href="@{/objective/template/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Objective Template</a>
 </body>
 </html>
 
