--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -25,8 +25,10 @@
     </table>
     <div class="row">
       <div class="col">
-        <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
-          Specification</a>
+        <a th:href="@{__${specification.id}__/edit}" class="btn btn-primary">
+          <i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit Specification
+        </a>
+        <a class="btn btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
       </div>
     </div>
     <p class="mt-4"></p>
@@ -55,6 +57,11 @@
     <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
     <a th:href="@{__${specification.id}__/stakeholder/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Stakeholder</a>
     </div>
+
+    <form id="deleteForm" th:object="${specification}" th:action="@{/specification/__${specification.id}__/delete}" method="post">
+      <input type="hidden" th:field="*{id}"/>
+      <input type="hidden" id="delete-name" th:field="*{name}"/>
+    </form>
   </body>
 
 </html>
