--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -26,8 +26,13 @@
         <td th:text="*{priority}"></td>
       </tr>
     </table>
-    <a th:href="@{__${stakeholder.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
-      Stakeholder</a>
+    <div class="row">
+      <div class="col">
+        <a th:href="@{__${stakeholder.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
+          Stakeholder</a>
+        <a th:if="${!stakeholder['new']}" class="btn btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this stakeholder?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+      </div>
+    </div>
     <hr/>
     <p class="mt-4"></p>
     <div th:if="${#lists.isEmpty(stakeholder.objectives)}" class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
@@ -50,6 +55,12 @@
     <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
     <a th:href="@{__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
       Objective</a>
+
+    <form id="deleteForm" th:object="${stakeholder}" th:action="@{/stakeholder/__${stakeholder.id}__/delete}" method="post">
+      <input type="hidden" th:field="*{id}"/>
+      <input type="hidden" th:field="*{specification}"/>
+      <input type="hidden" id="delete-name"  th:field="*{name}"/>
+    </form>
   </body>
 
 </html>
