--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -48,7 +48,7 @@
         <tbody>
         <tr th:each="stakeholder : ${specification.stakeholders}">
           <td>
-            <a th:href="@{/stakeholder/__${stakeholder.id}__}" th:text="${stakeholder.name}"/></a>
+            <a th:href="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__}" th:text="${stakeholder.name}"/></a>
           </td>
           <td th:text="${stakeholder.priority}"/>
         </tr>
