--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" role="navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark mb-0" role="navigation">
     <div class="container-fluid">
       <a class="navbar-brand" th:href="@{/}">SOAM</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar">
@@ -52,12 +52,12 @@
           <li th:replace="~{::menuItem ('/specification/find','specifications','Find Specifications','','Specifications')}">
             <span>Specifications</span>
           </li>
-          <li th:replace="~{::menuItem ('/stakeholder/find','stakeholders','Find Stakeholders','','Stakeholders')}">
-            <span>Specifications</span>
-          </li>
-          <li th:replace="~{::menuItem ('/objective/find','objectives','Find Objectives','','Objectives')}">
-            <span>Objectives</span>
-          </li>
+<!--          <li th:replace="~{::menuItem ('/stakeholder/find','stakeholders','Find Stakeholders','','Stakeholders')}">-->
+<!--            <span>Stakeholders</span>-->
+<!--          </li>-->
+<!--          <li th:replace="~{::menuItem ('/objective/find','objectives','Find Objectives','','Objectives')}">-->
+<!--            <span>Objectives</span>-->
+<!--          </li>-->
           <li class="nav-item dropdown" >
             <a class="nav-link dropdown-toggle" th:classappend="${menu=='templates' ? 'active' : ''}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Templates
@@ -70,6 +70,13 @@
           </li>
         </ul>
       </div>
+    </div>
+  </nav>
+  <nav class="breadcrumb-nav mt-0 pt-1" aria-label="breadcrumb">
+    <div class="container">
+      <ol class="breadcrumb m-0 p-0">
+        <li class="breadcrumb-item active" aria-current="page">Home</li>
+      </ol>
     </div>
   </nav>
   <div class="container-fluid">
