--- a/src/main/resources/templates/objective/addUpdateObjective.html
+++ b/src/main/resources/templates/objective/addUpdateObjective.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </form>
-  <form th:if="${!objective['new']}" id="deleteForm" th:object="${objective}" th:action="@{/objective/__${objective.id}__/delete}" method="post">
+  <form th:if="${!objective['new']}" id="deleteForm" th:object="${objective}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
       <input type="hidden" th:field="*{stakeholder}"/>
       <input type="hidden" id="delete-name"  th:field="*{name}"/>
