--- a/src/main/resources/templates/objective/objectiveDetails.html
+++ b/src/main/resources/templates/objective/objectiveDetails.html
@@ -6,7 +6,7 @@
   <body>
     <h2>Objective Information</h2>
 
-    <p class="lead mb-3">Stakeholder: <a th:href="@{/stakeholder/__${objective.stakeholder.id}__}" th:text="${objective.stakeholder.name}"></a></p>
+    <p class="lead mb-3">Stakeholder: <a th:href="@{/specification/__${specification.id}__/stakeholder/__${objective.stakeholder.id}__}" th:text="${objective.stakeholder.name}"></a></p>
 
     <table class="table table-striped" th:object="${objective}">
       <tr>
@@ -28,12 +28,12 @@
     </table>
     <div class="row">
       <div class="col">
-        <a th:href="@{__${objective.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
+        <a th:href="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__/edit}" class="btn btn-primary"><i class="fa fa-pencil me-1" aria-hidden="true"></i> Edit
           Objective</a>
         <a th:if="${!objective['new']}" class="btn btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
       </div>
     </div>
-    <form id="deleteForm" th:object="${objective}" th:action="@{/objective/__${objective.id}__/delete}" method="post">
+    <form id="deleteForm" th:object="${objective}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
       <input type="hidden" th:field="*{stakeholder}"/>
       <input type="hidden" id="delete-name"  th:field="*{name}"/>
