--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -46,17 +46,17 @@
       <tbody>
       <tr th:each="objective : ${stakeholder.objectives}">
         <td>
-          <a th:href="@{/objective/__${objective.id}__}" th:text="${objective.name}"/></a>
+          <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/objective/__${objective.id}__}" th:text="${objective.name}"/></a>
         </td>
         <td th:text="${objective.priority}"/>
       </tr>
       </tbody>
     </table>
     <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
-    <a th:href="@{__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
+    <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
       Objective</a>
 
-    <form id="deleteForm" th:object="${stakeholder}" th:action="@{/stakeholder/__${stakeholder.id}__/delete}" method="post">
+    <form id="deleteForm" th:object="${stakeholder}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
       <input type="hidden" th:field="*{specification}"/>
       <input type="hidden" id="delete-name"  th:field="*{name}"/>
