--- a/src/main/scss/soam.scss
+++ b/src/main/scss/soam.scss
@@ -61,6 +61,10 @@ $table-border-color:                      $spring-brown;
   color: $spring-grey;
 }
 
+.breadcrumb-nav {
+  background-color: $spring-light-grey;
+}
+
 .btn-primary {
   margin-top: 12px;
   border-width: 2px;
