--- a/src/main/resources/templates/stakeholder/stakeholderDetails.html
+++ b/src/main/resources/templates/stakeholder/stakeholderDetails.html
@@ -35,6 +35,7 @@
     </div>
     <hr/>
     <p class="mt-4"></p>
+    <div class="col-md-10">
     <div th:if="${#lists.isEmpty(stakeholder.objectives)}" class="alert alert-warning">No Objectives have been added to this stakeholder.</div>
     <table class="table table-striped" th:if="${!#lists.isEmpty(stakeholder.objectives)}">
       <thead>
@@ -55,7 +56,7 @@
     <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
     <a th:href="@{/specification/__${stakeholder.specification.id}__/stakeholder/__${stakeholder.id}__/objective/new}" class="btn btn-primary"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add
       Objective</a>
-
+    </div>
     <form id="deleteForm" th:object="${stakeholder}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
       <input type="hidden" th:field="*{specification}"/>
