--- a/src/main/resources/templates/specification/specificationDetails.html
+++ b/src/main/resources/templates/specification/specificationDetails.html
@@ -3,16 +3,16 @@
 <html xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specifications')}">
   <head>
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+<!--    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>-->
     <script>
       document.addEventListener("DOMContentLoaded", (event) =>{
 
-        const dataTable = new simpleDatatables.DataTable("#stakeholdersTable", {
-          searchable: true,
-          paging: false
-          // fixedHeight: true,
-        })
+        // const dataTable = new simpleDatatables.DataTable("#stakeholdersTable", {
+        //   searchable: true,
+        //   paging: false
+        //   // fixedHeight: true,
+        // })
         // $('#example').DataTable( {
         //   ajax:           "../data/2500.txt",
         //   deferRender:    true,
